@@ -158,5 +158,21 @@ jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.WriteRC -libjars :HCAT_JAR:
                                 },
                         ],
                 }, # end g
+                {
+                        'name' => 'Hadoop_HBase',
+                        'tests' => [
+                                {
+                                 'num' => 1
+                                ,'hcat_prep'=>q\drop table if exists hadoop_hbase_1;
+create table hadoop_hbase_1(key string, gpa string) STORED BY 'org.apache.hcatalog.hbase.HBaseHCatStorageHandler' TBLPROPERTIES ('hbase.columns.mapping'=':key,info:gpa');\
+                                ,'hadoop' => q\
+jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.HBaseReadWrite -libjars :HCAT_JAR: :THRIFTSERVER: :INPATH:/studenttab10k hadoop_hbase_1 :OUTPATH:
+\,
+                                ,'sql' => q\select name, sum(gpa) from studenttab10k group by name;\
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+                                },
+                        ],
+                }, # end g
          ]
 }
