@@ -16,6 +16,6 @@
 junit.version=3.8.1
 ivy.version=2.2.0
 rats-lib.version=0.5.1
-hbase.version=0.90.3
+hbase.version=0.90.5
 zookeeper.version=3.4.0
 thrift.version=0.7.0
